# pyfastmask

./: .gitignore  BENCHMARK.md  LICENSE  README.md  pyproject.toml  setup.py  test-requirements.txt
.github/workflows/: build-and-test.yml  flake.yml  python-package.yml  wheels.yml
benchmark/: run_benchmark.py  test_images.csv
pyfastmask/: __init__.py
src/: build.sh  decode.h  encode.h  fastmask.cpp  fastmask.h  test_fastmask.py  wrapper.cpp
tests/: test_fastmask.py
