[build-system]
requires = [
    "setuptools>=42",
    "pybind11>=2.10.0",
    "py-cpuinfo>=9.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "pyfastmask"
version = "1.1.0"
description = "Fast low color mask read/write"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name="Andrei Luzan"}]
keywords = ["mask", "segmentation", "fast", "read", "write"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Graphics"
]
dependencies = [
    "numpy>=1.20.0",
]

[project.urls]
Repository = "https://github.com/JIy3AHKO/pyfastmask"
Issues = "https://github.com/JIy3AHKO/pyfastmask/issues"
